ori-k8s/pdf-service/k3s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grading-pdf-service
  namespace: grading-pdf
spec:
  selector:
    app: grading-pdf-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: grading-pdf
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
