ori-k8s/pdf-service/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-pdf-ingress
  namespace: grading-pdf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/responseforwarding.flushinterval: "1ms"
    traefik.ingress.kubernetes.io/buffering.maxrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/buffering.memrequestbodybytes: "0"
    traefik.ingress.kubernetes.io/request-timeout: "600s"

spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - gradingpdf.grading.software
    secretName: grading-pdf-tls
  rules:
  - host: gradingpdf.grading.software
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grading-pdf-service
            port:
              number: 80
